2014-04-28 v1.1-23
  + Add intRange (integer range) and squareLayout (square matrix layout of plots)

2014-04-22 v1.1-22
  + add histMat to visualize matrices with histograms
  + add plotPCA

2014-01-28 v1.1-20
  + Add two histogram related functions: qHist for drawing histogram with quantile lines; xclipHist draws qHist with clipped x values by quantile filtering.

2014-01-23 v1.1-19
  + Add ribiosUtils to the dependency list of ribiosPlot

2014-01-22 v1.1-18
  + add pdf2png to convert arbitrary PDF files to PNG

2013-08-19 v1.1-17
  + Add new 3-color comb: cyanblackyellow and yellowbackyan 
  + add jitter.xyplot

2013-07-22 v1.1-16
  + brewer.pal.factor automatically adjusts the size of color palettes according to the input factor and the maxcolor information provided by brewer.pal.info
  + PCA plotting functions have been refactored

2013-02-22 v1.1-15
  + Update exprs-boxplot.Rscript to boxplot.Rscript. New function includes (1) correct display of long labels (2) accepts gct or tab-delimited files (3) automatically guess the width of the figure, and (4) display feature descriptions whenever possible

2012-10-20 v1.1-14
  + Add two functions to simplify plotting in Rscripts: idev and ipdf
  + Add two color panels: blackyellowred and blackgoldred

2012-09-11 v1.1-13
  + Debugging: exprs-boxplot.Rscript now accepts both tab-delimited and gct files, and aggregate groups

2012-09-10 v1.1-12
  + Improvement: exprs-boxplot.Rscript works with GCT file as well. This was made available by replacing 'read.table' with 'read_exprs_matrix'.

2012-08-22 v1.1-11
  + Bug fix: boundNorm works now with NAs.

2012-06-07 v1.1-10
  + brewer.pal.factor and brewer.pal.factorLevels fix tipp errors

2012-06-06 v1.1-9
  + exprs-boxplot.Rscript has been added to GIT and is now able to handle user-specified ylim values
  + Cleaned up test files and Rscript folders

2012-05-23 v1.1-8